--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script type="text/javascript" src="js/jquery-1.7.2.min.js"></script>
 	<script type="text/javascript" src="js/jquery-ui-1.8.21.custom.min.js"></script>
 	<script type="text/javascript" src="js/jquery.datetimepicker.js"></script>
+	<script type="text/javascript" src="js/date-en-IE.js"></script>
 </style>
 </head>
 <body>
