converted functions to objects multiple instances on one page code cleanup

--- a/index.html
+++ b/index.html
@@ -57,6 +57,44 @@ Curabitur nulla nunc, porttitor a porttitor sit amet, condimentum quis nulla. In
 <p>
 Proin a nisi at mi placerat molestie in at turpis. Aenean porttitor lacinia ipsum, interdum sollicitudin massa facilisis quis. Aliquam pellentesque ultrices arcu, eget congue mi molestie ut. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Integer orci dui, tristique mollis venenatis sit amet, blandit sed enim. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Maecenas consequat, velit dictum placerat adipiscing, orci orci pharetra neque, eu ornare arcu nisl a neque. Vivamus faucibus pharetra ornare. Maecenas commodo, felis ut vestibulum tempor, tortor turpis ultricies libero, dignissim adipiscing purus velit id mauris. Sed blandit lacus non augue vulputate sit amet pharetra nulla interdum. Nullam faucibus aliquet metus vitae hendrerit. Maecenas pulvinar auctor neque, quis tincidunt risus eleifend non. Etiam fermentum commodo sapien ac laoreet. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
 </p>
+<div name="input">
+		<input type="text"/>
+	</div>
+	
+	<p>
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ornare risus at libero tincidunt in consectetur diam lobortis. Nunc commodo odio libero, at gravida urna. Praesent ut risus vitae purus dictum gravida. Integer id augue massa, eget mattis lectus. Vestibulum porta neque sed mi tincidunt malesuada. Sed vehicula vehicula nunc et fringilla. Sed sapien mauris, tempus vitae dapibus nec, congue et mi. Donec ultricies elementum urna vitae imperdiet.
+</p>
+<p>
+Aliquam erat volutpat. Etiam pulvinar auctor nisl eget euismod. Sed tempus metus dui, id semper tortor. Nunc mollis commodo nisl, eget accumsan lectus sodales eu. Duis at egestas sapien. Aliquam erat volutpat. Etiam sem massa, auctor et venenatis nec, fringilla ut magna.
+</p>
+<p>
+Mauris ligula nibh, adipiscing a sodales in, congue nec mauris. Ut viverra, tellus ut euismod vulputate, justo felis tempus diam, in faucibus quam urna ut lacus. Fusce bibendum est in elit commodo nec consectetur ipsum tempor. Aenean ut elementum odio. Phasellus non est nisl. Fusce quis velit et est feugiat pharetra quis sit amet nisl. Etiam eget purus vel purus eleifend tincidunt. Aenean nulla nulla, suscipit nec pellentesque sed, eleifend et massa. Suspendisse vel est magna, eu ultrices justo. Phasellus posuere tincidunt est et porttitor. Quisque nec ipsum ut lacus dignissim interdum vitae vel odio. Sed a nulla eros, id scelerisque lorem. Proin luctus pretium suscipit. Aenean vel ultricies eros. Aliquam suscipit, sapien non adipiscing aliquet, turpis elit luctus ante, nec consequat felis enim vitae magna. In ac ipsum in leo euismod venenatis ut in elit.
+</p>
+<p>
+Curabitur nulla nunc, porttitor a porttitor sit amet, condimentum quis nulla. Integer condimentum ullamcorper mauris, placerat auctor justo egestas a. Morbi mauris purus, lobortis nec bibendum ut, vulputate et massa. In in purus id nibh convallis ultrices accumsan ac sapien. Aliquam erat volutpat. Ut cursus blandit mauris, eget scelerisque nulla pulvinar in. Proin sit amet nunc quis sapien elementum eleifend. Integer in mauris nibh. Nulla vestibulum accumsan nibh sed pretium.
+</p>
+<p>
+Proin a nisi at mi placerat molestie in at turpis. Aenean porttitor lacinia ipsum, interdum sollicitudin massa facilisis quis. Aliquam pellentesque ultrices arcu, eget congue mi molestie ut. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Integer orci dui, tristique mollis venenatis sit amet, blandit sed enim. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Maecenas consequat, velit dictum placerat adipiscing, orci orci pharetra neque, eu ornare arcu nisl a neque. Vivamus faucibus pharetra ornare. Maecenas commodo, felis ut vestibulum tempor, tortor turpis ultricies libero, dignissim adipiscing purus velit id mauris. Sed blandit lacus non augue vulputate sit amet pharetra nulla interdum. Nullam faucibus aliquet metus vitae hendrerit. Maecenas pulvinar auctor neque, quis tincidunt risus eleifend non. Etiam fermentum commodo sapien ac laoreet. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
+</p>
+<div name="input">
+		<input type="text"/>
+	</div>
+	
+	<p>
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ornare risus at libero tincidunt in consectetur diam lobortis. Nunc commodo odio libero, at gravida urna. Praesent ut risus vitae purus dictum gravida. Integer id augue massa, eget mattis lectus. Vestibulum porta neque sed mi tincidunt malesuada. Sed vehicula vehicula nunc et fringilla. Sed sapien mauris, tempus vitae dapibus nec, congue et mi. Donec ultricies elementum urna vitae imperdiet.
+</p>
+<p>
+Aliquam erat volutpat. Etiam pulvinar auctor nisl eget euismod. Sed tempus metus dui, id semper tortor. Nunc mollis commodo nisl, eget accumsan lectus sodales eu. Duis at egestas sapien. Aliquam erat volutpat. Etiam sem massa, auctor et venenatis nec, fringilla ut magna.
+</p>
+<p>
+Mauris ligula nibh, adipiscing a sodales in, congue nec mauris. Ut viverra, tellus ut euismod vulputate, justo felis tempus diam, in faucibus quam urna ut lacus. Fusce bibendum est in elit commodo nec consectetur ipsum tempor. Aenean ut elementum odio. Phasellus non est nisl. Fusce quis velit et est feugiat pharetra quis sit amet nisl. Etiam eget purus vel purus eleifend tincidunt. Aenean nulla nulla, suscipit nec pellentesque sed, eleifend et massa. Suspendisse vel est magna, eu ultrices justo. Phasellus posuere tincidunt est et porttitor. Quisque nec ipsum ut lacus dignissim interdum vitae vel odio. Sed a nulla eros, id scelerisque lorem. Proin luctus pretium suscipit. Aenean vel ultricies eros. Aliquam suscipit, sapien non adipiscing aliquet, turpis elit luctus ante, nec consequat felis enim vitae magna. In ac ipsum in leo euismod venenatis ut in elit.
+</p>
+<p>
+Curabitur nulla nunc, porttitor a porttitor sit amet, condimentum quis nulla. Integer condimentum ullamcorper mauris, placerat auctor justo egestas a. Morbi mauris purus, lobortis nec bibendum ut, vulputate et massa. In in purus id nibh convallis ultrices accumsan ac sapien. Aliquam erat volutpat. Ut cursus blandit mauris, eget scelerisque nulla pulvinar in. Proin sit amet nunc quis sapien elementum eleifend. Integer in mauris nibh. Nulla vestibulum accumsan nibh sed pretium.
+</p>
+<p>
+Proin a nisi at mi placerat molestie in at turpis. Aenean porttitor lacinia ipsum, interdum sollicitudin massa facilisis quis. Aliquam pellentesque ultrices arcu, eget congue mi molestie ut. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Integer orci dui, tristique mollis venenatis sit amet, blandit sed enim. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Maecenas consequat, velit dictum placerat adipiscing, orci orci pharetra neque, eu ornare arcu nisl a neque. Vivamus faucibus pharetra ornare. Maecenas commodo, felis ut vestibulum tempor, tortor turpis ultricies libero, dignissim adipiscing purus velit id mauris. Sed blandit lacus non augue vulputate sit amet pharetra nulla interdum. Nullam faucibus aliquet metus vitae hendrerit. Maecenas pulvinar auctor neque, quis tincidunt risus eleifend non. Etiam fermentum commodo sapien ac laoreet. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
+</p>
 
 	
   </div>
