--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
 
       <section>
         <div id="title">
-          <h1>Jquery-datetimepicker</h1>
+          <h1>jQuery.datetimepicker</h1>
           <p></p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/firegnom">firegnom</a></span>
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="http://twitter.com/#!/michigangraham">mattgraham</a></span>
         </div>
 
-        <h1>jquery-datetimepicker</h1>
+        <h1>jQuery.datetimepicker</h1>
 
-<p>WIP</p>
+		<p>Project is still  in evelopment demo page of what can be expected soon can be found <a href="demo/index.html">here</a></p>
       </section>
 
     </div>
